WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167465
Gamepads: Some DPads are still not exposed in the HID backend
https://bugs.webkit.org/show_bug.cgi?id=167465
Summary
Gamepads: Some DPads are still not exposed in the HID backend
Brady Eidson
Reported
2017-01-26 13:43:19 PST
Gamepads: Some DPads are still not exposed in the HID backend <
rdar://problem/30217518
>
Attachments
Patch
(1.98 KB, patch)
2017-01-26 13:47 PST
,
Brady Eidson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2017-01-26 13:47:56 PST
Created
attachment 299842
[details]
Patch
Brady Eidson
Comment 2
2017-01-26 14:12:37 PST
https://trac.webkit.org/changeset/211231
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug