Gamepads: Some DPads are still not exposed in the HID backend. rdar://problem/30217518 and https://bugs.webkit.org/show_bug.cgi?id=167465

Reviewed by Alex Christensen.

No new tests (Currently unable to test HID backend directly)

* platform/gamepad/mac/HIDGamepad.cpp:
(WebCore::HIDGamepad::maybeAddButton): Allow GenericDesktop paged elements that are DPads to be buttons.

Canonical link: https://commits.webkit.org/184507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211231 268f45cc-cd09-0410-ab3c-d52691b4dbfc